# conan-training-basic

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  main.cpp
add_lib/: CMakeLists.txt  add.cpp
conan_conf/: remotes.json
mul_lib/: CMakeLists.txt  mul.cpp  mul.h
